Fixed: Animation and block overlap
the dark div wasn't showing, and then I fixed that but then it was blocking the whole screen so I timed it out after the animation finishes

--- a/pig-game/assets/css/style.css
+++ b/pig-game/assets/css/style.css
@@ -214,7 +214,7 @@ main {
       0px 0px 300px var(--color-sun-secondary);
   }
 }
-.dark1 {
+.dark {
   position: absolute;
   left: 0px;
   top: 0px;
